# shuttle-db-issue-minimal

./: Cargo.toml  LICENSE  README.md  Secrets.toml  schema.sql
src/: database.rs  handler.rs  main.rs
