[package]
name = "shuttle-db-issue-minimal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4"
serenity = { version = "0.12.0", default-features = false, features = ["cache", "chrono", "client", "collector", "gateway", "model", "rustls_backend"] }
shuttle-runtime = "0.34.1"
shuttle-secrets = "0.34.1"
shuttle-serenity = { version = "0.34.1", default-features = false, features = ["serenity-0-12-rustls_backend"] }
shuttle-shared-db = { version = "0.34.1", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "postgres", "chrono"] }
tokio = "1.29.1"
tracing = "0.1.37"
